adding metric openstack.ironic.volume.connector.count
Signed-off-by: rahulkaukuntla <rahul.kaukuntla@datadoghq.com>

--- a/openstack_controller/assets/configuration/spec.yaml
+++ b/openstack_controller/assets/configuration/spec.yaml
@@ -454,6 +454,13 @@ files:
                                   - type: object
                       - name: conductors
                         type: boolean
+                      - name: volumes
+                        anyOf:
+                          - type: boolean
+                          - type: object
+                            properties:
+                              - name: connectors
+                                type: boolean
               - name: load-balancer
                 anyOf:
                   - type: boolean
