--- a/confluent_platform/datadog_checks/confluent_platform/data/metrics.yaml
+++ b/confluent_platform/datadog_checks/confluent_platform/data/metrics.yaml
@@ -1600,7 +1600,7 @@ jmx_metrics:
         
 
   # Components Metrics:
-  #   - Confluent Streams Thread: https://docs.confluent.io/current/streams/monitoring.html#built-in-metrics
+  #   - Confluent Streams Thread: https://docs.confluent.io/current/streams/monitoring.html#thread-metrics
   - include:
       domain: kafka.streams
       bean_regex: kafka\.streams:type=stream-thread-metrics,thread-id=.*
