adding metric openstack.ironic.volume.target.count
Signed-off-by: rahulkaukuntla <rahul.kaukuntla@datadoghq.com>

--- a/openstack_controller/assets/configuration/spec.yaml
+++ b/openstack_controller/assets/configuration/spec.yaml
@@ -461,6 +461,8 @@ files:
                             properties:
                               - name: connectors
                                 type: boolean
+                              - name: targets
+                                type: boolean
               - name: load-balancer
                 anyOf:
                   - type: boolean
