--- a/mongo/assets/configuration/spec.yaml
+++ b/mongo/assets/configuration/spec.yaml
@@ -89,6 +89,29 @@ files:
           type: string
         example:
           [ one_database, other_database ]
+    - name: dbm
+      description: |
+        Set to `true` enable Database Monitoring.
+      enabled: false
+      value:
+        type: boolean
+        example: false
+        display_default: false
+    - name: cluster_name
+      description: |
+        The name of the cluster to which the monitored MongoDB belongs.
+      value:
+        type: string
+    - name: database_instance_collection_interval
+      hidden: true
+      description: |
+        Set the database instance collection interval (in seconds). The database instance collection sends
+        basic information about the database instance along with a signal that it still exists.
+        This collection does not involve any additional queries to the database.
+      value:
+        type: number
+        example: 1800
+        display_default: false
     - name: replica_check
       description: |
         Whether or not to read from available replicas.
