--- a/mongo/datadog_checks/mongo/data/conf.yaml.example
+++ b/mongo/datadog_checks/mongo/data/conf.yaml.example
@@ -84,6 +84,16 @@ instances:
     #   - one_database
     #   - other_database
 
+    ## @param dbm - boolean - optional - default: false
+    ## Set to `true` enable Database Monitoring.
+    #
+    # dbm: false
+
+    ## @param cluster_name - string - optional
+    ## The name of the cluster to which the monitored MongoDB belongs.
+    #
+    # cluster_name: <CLUSTER_NAME>
+
     ## @param replica_check - boolean - optional - default: true
     ## Whether or not to read from available replicas.
     ## Disable this if any replicas are inaccessible to the Agent. This option is not supported for sharded clusters.
