Add support for ssh tunnel

--- a/esxi/hatch.toml
+++ b/esxi/hatch.toml
@@ -2,8 +2,15 @@
 
 [[envs.default.matrix]]
 python = ["3.11"]
+setup = ["lab"]
+
+[[envs.default.matrix]]
+python = ["3.11"]
+setup = ["vcsim"]
 version = ["6.5", "7.0"]
-type = ["vcsim"]
 
 [envs.default.overrides]
 matrix.version.env-vars = "VSPHERE_VERSION"
+matrix.setup.env-vars = [
+  { key = "USE_VSPHERE_LAB", value = "true", if = ["lab"] },
+]
