adding metric openstack.ironic.driver.count
Signed-off-by: rahulkaukuntla <rahul.kaukuntla@datadoghq.com>

--- a/openstack_controller/assets/configuration/spec.yaml
+++ b/openstack_controller/assets/configuration/spec.yaml
@@ -454,6 +454,8 @@ files:
                                   - type: object
                       - name: conductors
                         type: boolean
+                      - name: drivers
+                        type: boolean
               - name: load-balancer
                 anyOf:
                   - type: boolean
