Add windows event log overview dashboard

--- a/win32_event_log/manifest.json
+++ b/win32_event_log/manifest.json
@@ -38,6 +38,9 @@
     },
     "logs": {
       "source": "windows.events"
+    },
+    "dashboards": {
+      "Windows Event Log Overview": "assets/dashboards/windows_event_log_overview.json"
     }
   }
 }
