commit to reset staging

--- a/tekton/manifest.json
+++ b/tekton/manifest.json
@@ -59,7 +59,7 @@
     }
   },
   "author": {
-    "support_email": "help@datadoghq.com",
+    "support_email": "help1@datadoghq.com",
     "name": "Datadog",
     "homepage": "https://www.datadoghq.com",
     "sales_email": "info@datadoghq.com"
