--- a/openstack_controller/assets/configuration/spec.yaml
+++ b/openstack_controller/assets/configuration/spec.yaml
@@ -454,6 +454,15 @@ files:
                                   - type: object
                       - name: conductors
                         type: boolean
+                      - name: volumes
+                        anyOf:
+                          - type: boolean
+                          - type: object
+                            properties:
+                              - name: connectors
+                                type: boolean
+                              - name: targets
+                                type: boolean
                       - name: ports
                         type: boolean  
               - name: load-balancer
