--- a/win32_event_log/manifest.json
+++ b/win32_event_log/manifest.json
@@ -40,7 +40,7 @@
       "source": "windows.events"
     },
     "dashboards": {
-      "Windows Event Log Overview": "assets/dashboards/windows_event_log_overview.json"
+      "windows_event_log_overview": "assets/dashboards/windows_event_log_overview.json"
     }
   }
 }
