--- a/mongo/datadog_checks/mongo/data/conf.yaml.example
+++ b/mongo/datadog_checks/mongo/data/conf.yaml.example
@@ -91,6 +91,10 @@ instances:
 
     ## @param cluster_name - string - optional
     ## The name of the cluster to which the monitored MongoDB belongs.
+    ## Used to group MongoDB instances in a MongoDB cluster.
+    ## Please note that the cluster name must be unique for each MongoDB cluster.
+    ##
+    ## Required when `dbm` is enabled.
     #
     # cluster_name: <CLUSTER_NAME>
 
