--- a/openstack_controller/assets/configuration/spec.yaml
+++ b/openstack_controller/assets/configuration/spec.yaml
@@ -467,6 +467,8 @@ files:
                         type: boolean  
                       - name: drivers
                         type: boolean
+                      - name: allocations
+                        type: boolean
               - name: load-balancer
                 anyOf:
                   - type: boolean
