[PLINT-388] Adding Ironic Driver and Allocation metrics (#17525)
* adding metric openstack.ironic.driver.count

Signed-off-by: rahulkaukuntla <rahul.kaukuntla@datadoghq.com>

* adding metric openstack.ironic.allocation.count

Signed-off-by: rahulkaukuntla <rahul.kaukuntla@datadoghq.com>

---------

Signed-off-by: rahulkaukuntla <rahul.kaukuntla@datadoghq.com>

--- a/openstack_controller/assets/configuration/spec.yaml
+++ b/openstack_controller/assets/configuration/spec.yaml
@@ -465,6 +465,10 @@ files:
                                 type: boolean
                       - name: ports
                         type: boolean  
+                      - name: drivers
+                        type: boolean
+                      - name: allocations
+                        type: boolean
               - name: load-balancer
                 anyOf:
                   - type: boolean
