Remove deprecated categories

--- a/agent_metrics/manifest.json
+++ b/agent_metrics/manifest.json
@@ -14,8 +14,7 @@
     "classifier_tags": [
       "Supported OS::Linux",
       "Supported OS::macOS",
-      "Supported OS::Windows",
-      "Category::Monitoring"
+      "Supported OS::Windows"
     ]
   },
   "author": {
