--- a/tcp_check/manifest.json
+++ b/tcp_check/manifest.json
@@ -15,8 +15,7 @@
       "Supported OS::Linux",
       "Supported OS::macOS",
       "Supported OS::Windows",
-      "Category::Network",
-      "Category::Web"
+      "Category::Network"
     ]
   },
   "author": {
