--- a/mongo/datadog_checks/mongo/data/conf.yaml.example
+++ b/mongo/datadog_checks/mongo/data/conf.yaml.example
@@ -90,7 +90,7 @@ instances:
     # dbm: false
 
     ## @param cluster_name - string - optional
-    ## The name of the cluster to which the monitored MongoDB belongs.
+    ## The name of the cluster to which the monitored MongoDB instance belongs.
     ## Used to group MongoDB instances in a MongoDB cluster.
     ## Please note that the cluster name must be unique for each MongoDB cluster.
     ##
