--- a/.github/workflows/build-ddev.yml
+++ b/.github/workflows/build-ddev.yml
@@ -480,7 +480,7 @@ jobs:
     - name: Upload standalone binaries
       uses: actions/upload-artifact@v4
       with:
-        name: standalone
+        name: standalone-${{ runner.os }}
         path: ddev/archives/*
         if-no-files-found: error
 
