--- a/openstack_controller/assets/configuration/spec.yaml
+++ b/openstack_controller/assets/configuration/spec.yaml
@@ -448,7 +448,26 @@ files:
                                   type: string
                               - name: interval
                                 type: integer
+                              - name: portgroups
+                                anyOf:
+                                  - type: boolean
+                                  - type: object
                       - name: conductors
+                        type: boolean
+                      - name: volumes
+                        anyOf:
+                          - type: boolean
+                          - type: object
+                            properties:
+                              - name: connectors
+                                type: boolean
+                              - name: targets
+                                type: boolean
+                      - name: ports
+                        type: boolean  
+                      - name: drivers
+                        type: boolean
+                      - name: allocations
                         type: boolean
               - name: load-balancer
                 anyOf:
