specifying that the default of use_legacy_check_version is true not false
Signed-off-by: rahulkaukuntla <rahul.kaukuntla@datadoghq.com>

--- a/openstack_controller/datadog_checks/openstack_controller/data/conf.yaml.example
+++ b/openstack_controller/datadog_checks/openstack_controller/data/conf.yaml.example
@@ -34,7 +34,7 @@ init_config:
 instances:
 
   -
-    ## @param use_legacy_check_version - boolean - optional - default: false
+    ## @param use_legacy_check_version - boolean - optional - default: true
     ## For backward compatibility reasons, it is possible to use a deprecated version of the Openstack Controller
     ## integration by setting this field to "true".
     #
