--- a/openstack_controller/assets/configuration/spec.yaml
+++ b/openstack_controller/assets/configuration/spec.yaml
@@ -14,14 +14,6 @@ files:
             service.hidden: true
     - template: instances
       options:
-        - name: use_legacy_check_version
-          display_priority: 1
-          description: |
-            For backward compatibility reasons, it is possible to use a deprecated version of the Openstack Controller
-            integration by setting this field to "true".
-          value:
-              type: boolean
-              example: false
         - name: name
           hidden: true
           description: |
@@ -42,6 +34,7 @@ files:
           value:
             example: <PASSWORD>
             type: string
+
         - name: domain_id
           description: |
            The domain ID used to connect to Openstack. If not specified, the check will
@@ -65,6 +58,14 @@ files:
                 id: <DOMAIN_ID>
             type: object
           enabled: true
+        - name: use_legacy_check_version
+          description: |
+            For backward compatibility reasons, it is possible to use a deprecated version of the Openstack Controller
+            integration by setting this field to "true".
+          enabled: true
+          value:
+              type: boolean
+              example: false
         - name: whitelist_project_names
           hidden: true
           description: |
