--- a/openstack_controller/datadog_checks/openstack_controller/data/conf.yaml.example
+++ b/openstack_controller/datadog_checks/openstack_controller/data/conf.yaml.example
@@ -33,13 +33,6 @@ init_config:
 #
 instances:
 
-  -
-    ## @param use_legacy_check_version - boolean - optional - default: true
-    ## For backward compatibility reasons, it is possible to use a deprecated version of the Openstack Controller
-    ## integration by setting this field to "true".
-    #
-    # use_legacy_check_version: false
-
     ## @param username - string - optional
     ## The User name used to connect to Openstack.
     #
@@ -55,6 +48,12 @@ instances:
     ## use the "default" Domain ID
     #
     # domain_id: default
+
+    ## @param use_legacy_check_version - boolean - optional - default: false
+    ## For backward compatibility reasons, it is possible to use a deprecated version of the Openstack Controller
+    ## integration by setting this field to "true".
+    #
+    use_legacy_check_version: false
 
     ## @param use_agent_proxy - boolean - optional - default: true
     ## Whether the dd-agent proxy should also be used for openstack API requests (if set).
@@ -333,8 +332,8 @@ instances:
     ## @param tls_ca_cert - string - optional
     ## The path to a file of concatenated CA certificates in PEM format or a directory
     ## containing several CA certificates in PEM format. If a directory, the directory
-    ## must have been processed using the `openssl rehash` command. See:
-    ## https://www.openssl.org/docs/man3.2/man1/c_rehash.html
+    ## must have been processed using the c_rehash utility supplied with OpenSSL. See:
+    ## https://www.openssl.org/docs/manmaster/man3/SSL_CTX_load_verify_locations.html
     #
     # tls_ca_cert: <CA_CERT_PATH>
 
