--- a/.github/workflows/test-target.yml
+++ b/.github/workflows/test-target.yml
@@ -261,7 +261,7 @@ jobs:
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: test-results
+        name: test-results-${{ inputs.target }}
         path: "${{ env.TEST_RESULTS_BASE_DIR }}"
 
     - name: Upload coverage data
