Update categories for newer/updated integrations

--- a/fluxcd/manifest.json
+++ b/fluxcd/manifest.json
@@ -16,7 +16,10 @@
       "Category::Developer Tools",
       "Supported OS::Linux",
       "Supported OS::Windows",
-      "Supported OS::macOS"
+      "Supported OS::macOS",
+      "Category::Developer Tools",
+      "Submitted Data Type::Metrics",
+      "Submitted Data Type::Logs"
     ]
   },
   "author": {
