--- a/cloudera/manifest.json
+++ b/cloudera/manifest.json
@@ -15,7 +15,9 @@
       "Category::Cloud",
       "Supported OS::Linux",
       "Supported OS::Windows",
-      "Supported OS::macOS"
+      "Supported OS::macOS",
+      "Category::Data Stores",
+      "Submitted Data Type::Metrics"
     ]
   },
   "assets": {
