--- a/elastic/manifest.json
+++ b/elastic/manifest.json
@@ -17,7 +17,11 @@
       "Category::Tracing",
       "Supported OS::Linux",
       "Supported OS::Windows",
-      "Supported OS::macOS"
+      "Supported OS::macOS",
+      "Submitted Data Type::Metrics",
+      "Submitted Data Type::Logs",
+      "Submitted Data Type::Traces",
+      "Submitted Data Type::Events"
     ]
   },
   "author": {
