--- a/strimzi/manifest.json
+++ b/strimzi/manifest.json
@@ -16,7 +16,9 @@
       "Category::Kubernetes",
       "Supported OS::Linux",
       "Supported OS::Windows",
-      "Supported OS::macOS"
+      "Supported OS::macOS",
+      "Submitted Data Type::Logs",
+      "Submitted Data Type::Metrics"
     ]
   },
   "assets": {
