--- a/calico/manifest.json
+++ b/calico/manifest.json
@@ -17,7 +17,11 @@
       "Category::Network",
       "Supported OS::Linux",
       "Supported OS::Windows",
-      "Supported OS::macOS"
+      "Supported OS::macOS",
+      "Category::Security",
+      "Category::Kubernetes",
+      "Submitted Data Type::Metrics",
+      "Submitted Data Type::Logs"
     ]
   },
   "author": {
