--- a/gitlab/manifest.json
+++ b/gitlab/manifest.json
@@ -19,7 +19,9 @@
       "Category::Source Control",
       "Supported OS::Linux",
       "Supported OS::Windows",
-      "Supported OS::macOS"
+      "Supported OS::macOS",
+      "Submitted Data Type::Metrics",
+      "Submitted Data Type::Logs"
     ]
   },
   "author": {
