--- a/istio/manifest.json
+++ b/istio/manifest.json
@@ -17,7 +17,10 @@
       "Category::Tracing",
       "Supported OS::Linux",
       "Supported OS::Windows",
-      "Supported OS::macOS"
+      "Supported OS::macOS",
+      "Submitted Data Type::Metrics",
+      "Submitted Data Type::Logs",
+      "Submitted Data Type::Traces"
     ]
   },
   "author": {
