--- a/nvidia_triton/manifest.json
+++ b/nvidia_triton/manifest.json
@@ -16,7 +16,8 @@
       "Supported OS::Windows",
       "Supported OS::macOS",
       "Category::Log Collection",
-      "Category::AI/ML"
+      "Category::AI/ML",
+      "Submitted Data Type::Metrics"
     ]
   },
   "assets": {
