--- a/openstack_controller/manifest.json
+++ b/openstack_controller/manifest.json
@@ -16,7 +16,12 @@
       "Supported OS::macOS",
       "Supported OS::Windows",
       "Category::Cloud",
-      "Category::Log Collection"
+      "Category::Log Collection",
+      "Category::Provisioning",
+      "Category::Orchestration",
+      "Category::Configuration & Deployment",
+      "Submitted Data Type::Metrics",
+      "Submitted Data Type::Logs"
     ]
   },
   "author": {
