--- a/ray/manifest.json
+++ b/ray/manifest.json
@@ -16,7 +16,9 @@
       "Supported OS::Windows",
       "Supported OS::macOS",
       "Category::AI/ML",
-      "Category::Log Collection"
+      "Category::Log Collection",
+      "Submitted Data Type::Metrics",
+      "Submitted Data Type::Logs"
     ]
   },
   "assets": {
