--- a/weaviate/manifest.json
+++ b/weaviate/manifest.json
@@ -13,9 +13,11 @@
     "media": [],
     "classifier_tags": [
       "Category::AI/ML",
+      "Category::Data Stores",
       "Supported OS::Linux",
       "Supported OS::Windows",
-      "Supported OS::macOS"
+      "Supported OS::macOS",
+      "Submitted Data Type::Metrics"
     ]
   },
   "assets": {
