--- a/requirements-agent-release.txt
+++ b/requirements-agent-release.txt
@@ -1,3 +1,6 @@
+# THIS FILE IS AUTO-GENERATED, DO NOT EDIT BY HAND
+# DO NOT PASS THIS TO PIP DIRECTLY
+--no-index
 datadog-active-directory==2.1.0; sys_platform == 'win32'
 datadog-activemq-xml==3.2.0
 datadog-activemq==3.1.0
