--- a/kubernetes_cluster_autoscaler/assets/configuration/spec.yaml
+++ b/kubernetes_cluster_autoscaler/assets/configuration/spec.yaml
@@ -9,6 +9,7 @@ files:
       options:
         - template: instances/openmetrics
           overrides:
+            openmetrics_endpoint.required: true
             openmetrics_endpoint.value.example: http://localhost:8085/metrics
             openmetrics_endpoint.description: |
               Endpoint exposing the Kubernetes Cluster Autoscaler's Prometheus metrics. For more information refer to:
