[ECOS-1439] Update categories for newer/updated integrations (#17565)
* Update categories for newer/updated integrations

* Update fluxcd/manifest.json

--- a/fluxcd/manifest.json
+++ b/fluxcd/manifest.json
@@ -16,7 +16,9 @@
       "Category::Developer Tools",
       "Supported OS::Linux",
       "Supported OS::Windows",
-      "Supported OS::macOS"
+      "Supported OS::macOS",
+      "Submitted Data Type::Metrics",
+      "Submitted Data Type::Logs"
     ]
   },
   "author": {
