--- a/win32_event_log/manifest.json
+++ b/win32_event_log/manifest.json
@@ -25,7 +25,8 @@
   },
   "assets": {
     "integration": {
-      "source_type_name": "Win32",
+      "source_type_id": 47,
+      "source_type_name": "Event Viewer",
       "configuration": {
         "spec": "assets/configuration/spec.yaml"
       },
