add auto_install field

--- a/win32_event_log/manifest.json
+++ b/win32_event_log/manifest.json
@@ -27,6 +27,7 @@
     "integration": {
       "source_type_id": 47,
       "source_type_name": "Event Viewer",
+      "auto_install": true,
       "configuration": {
         "spec": "assets/configuration/spec.yaml"
       },
