added heat component
Signed-off-by: rahulkaukuntla <rahul.kaukuntla@datadoghq.com>

--- a/openstack_controller/assets/configuration/spec.yaml
+++ b/openstack_controller/assets/configuration/spec.yaml
@@ -654,6 +654,13 @@ files:
                             properties:
                               - name: members
                                 type: boolean
+              - name: heat
+                anyOf:
+                  - type: boolean
+                  - type: object
+                    properties:
+                      - name: stacks
+                        type: boolean
             example:
               compute: false
         - name: projects
