--- a/argo_rollouts/manifest.json
+++ b/argo_rollouts/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": "2.0.0",
   "app_uuid": "28d531ac-954c-4c5a-8769-589589f793e0",
   "app_id": "argo-rollouts",
-  "display_on_public_website": false,
+  "display_on_public_website": true,
   "tile": {
     "overview": "README.md#Overview",
     "configuration": "README.md#Setup",
