--- a/win32_event_log/manifest.json
+++ b/win32_event_log/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": "2.0.0",
   "app_uuid": "8a0f4809-8470-4f7c-a7e8-350ba64123aa",
-  "app_id": "win32-event-log",
+  "app_id": "event-viewer",
   "display_on_public_website": true,
   "tile": {
     "overview": "README.md#Overview",
