--- a/.github/workflows/test-results-master.yml
+++ b/.github/workflows/test-results-master.yml
@@ -23,8 +23,9 @@ jobs:
 
     - uses: actions/download-artifact@v4
       with:
-        name: test-results
+        pattern: test-results-*
         path: test-results
+        merge-multiple: true
 
     - name: Publish test results
       uses: EnricoMi/publish-unit-test-result-action@v2
