--- a/cisco_sdwan/manifest.json
+++ b/cisco_sdwan/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": "2.0.0",
   "app_uuid": "2da35edb-5e33-4e5f-93c3-65e08478d566",
   "app_id": "cisco-sdwan",
-  "display_on_public_website": false,
+  "display_on_public_website": true,
   "tile": {
     "overview": "README.md#Overview",
     "configuration": "README.md#Setup",
