--- a/.github/workflows/config/labeler.yml
+++ b/.github/workflows/config/labeler.yml
@@ -467,6 +467,8 @@ integration/tomcat:
 - tomcat/**/*
 integration/torchserve:
 - torchserve/**/*
+integration/traefik_mesh:
+- traefik_mesh/**/*
 integration/traffic_server:
 - traffic_server/**/*
 integration/twemproxy:
