--- a/esxi/assets/configuration/spec.yaml
+++ b/esxi/assets/configuration/spec.yaml
@@ -181,3 +181,13 @@ files:
             type: string
             example: "<DIRECTORY_PATH>"
         - template: instances/default
+          overrides:
+            empty_default_hostname.display_priority: 1
+            empty_default_hostname.required: true
+            empty_default_hostname.value.example: true
+            empty_default_hostname.description: |
+              The ESXi integration is a check where metrics are usually unrelated to the host
+              on which the Agent runs. Setting this parameter to true, prevents the Agent from attaching the hostname
+              (and the host tags) to the metrics. It is especially important to leave this parameter to "true" when you are
+              running the agent inside a vSphere VM as the VM tags are going to be unrelated to other metrics.
+
