--- a/.github/workflows/nightly-py2.yml
+++ b/.github/workflows/nightly-py2.yml
@@ -6,8 +6,30 @@ on:
   - cron: "0 4 * * *"
 
 jobs:
-  test:
-    uses: ./.github/workflows/test-all.yml
+  test-common:
+    uses: ./.github/workflows/tests/test-common.yml
+    with:
+      repo: core
+
+      # Options
+      standard: true
+      test-py2: true
+      test-py3: false
+    secrets: inherit
+  
+  test-dbm:
+    uses: ./.github/workflows/tests/test-dbm.yml
+    with:
+      repo: core
+
+      # Options
+      standard: true
+      test-py2: true
+      test-py3: false
+    secrets: inherit
+  
+  test-integrations:
+    uses: ./.github/workflows/tests/test-all.yml
     with:
       repo: core
 
@@ -19,7 +41,8 @@ jobs:
 
   submit-traces:
     needs:
-    - test
+    - test-common
+    - test-integrations
     if: success() || failure()
 
     uses: ./.github/workflows/submit-traces.yml
