Add windows event log overview dashboard (#17527)
Co-authored-by: Esther Kim <esther.kim@datadoghq.com>

--- a/win32_event_log/manifest.json
+++ b/win32_event_log/manifest.json
@@ -40,6 +40,9 @@
     },
     "logs": {
       "source": "windows.events"
+    },
+    "dashboards": {
+      "windows_event_log_overview": "assets/dashboards/windows_event_log_overview.json"
     }
   }
 }
