--- a/mongo/datadog_checks/mongo/data/conf.yaml.example
+++ b/mongo/datadog_checks/mongo/data/conf.yaml.example
@@ -86,6 +86,9 @@ instances:
 
     ## @param dbm - boolean - optional - default: false
     ## Set to `true` enable Database Monitoring.
+    ##
+    ## NOTE: Database Monitoring for MongoDB is currently in private beta.
+    ## If you are interested in participating, please reach out to your Datadog Customer Success Manager.
     #
     # dbm: false
 
