Fix submit-traces job

--- a/.github/workflows/submit-traces.yml
+++ b/.github/workflows/submit-traces.yml
@@ -31,11 +31,13 @@ jobs:
       with:
         pattern: "traces-*"
         path: captured-traces
+        merge-multiple: true
       continue-on-error: true
 
     - name: Replay
       if: steps.download.outcome == 'success'
       run: |-
+        ls -R
         cd captured-traces
         for request in *; do
           # The file could be empty if there were no traces, i.e. no Agent
